--- a/page-Villa-Del-Vino.html
+++ b/page-Villa-Del-Vino.html
@@ -10,19 +10,19 @@
     <meta charset="utf-8">
   
     <!-- Описание -->
-    <meta name="description" content="Туры выходного дня 'Новый поворот', VILLA DEL VINO  ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', VILLA DEL VINO. Винная экскурсия с дегустацией! Карбоновая ферма 'Зеленый Гай' с сырной дегустацией и 'Сердечный Карьер'  ">
     <!-- //Описание -->
     <!-- Ключевые слова -->
     <meta name="keywords"
-        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, VILLA DEL VINO " />
+        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, VILLA DEL VINO. Винная экскурсия с дегустацией, Карбоновая ферма 'Зеленый Гай' с сырной дегустацией и 'Сердечный Карьер'" />
     <!-- //Ключевые слова -->
   
     <!-- Open Graph -->
     <meta property="og:title" content="VILLA DEL VINO">
-    <meta property="og:description" content="Описание" />
+    <meta property="og:description" content="VILLA DEL VINO. Винная экскурсия с дегустацией! Карбоновая ферма 'Зеленый Гай' с сырной дегустацией и 'Сердечный Карьер'" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="Ссылка на страницу" />
-    <meta property="og:image" content="Картинка">
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Villa-Del-Vino.html" />
+    <meta property="og:image" content="images/Villa-Del-Vino/inside-Villa-Del-Vino.jpg">
     <!-- //Open Graph -->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
