--- a/page-Villa-Del-Vino.html
+++ b/page-Villa-Del-Vino.html
@@ -193,7 +193,7 @@
                       
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> -Цена- 787Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 787 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span> 1 День</span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
