--- a/booking.html
+++ b/booking.html
@@ -142,6 +142,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
+                                    <option>VILLA DEL VINO</option>
                                     <option>Жу-Жу Парк</option>
                                     <option>Вольногорские Мальдивы</option>
                                     <option>Межигорье. Умань. Перлина Кохання</option>
