--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -126,6 +126,12 @@
 					  <td>9-10 Октября</td>
 				       </tr>
 				      
+				      <tr>
+					  <th scope="row"></th>
+					  <td>VILLA DEL VINO</td>
+					  <td>14 Октября</td>
+				       </tr>
+				      
 				       <tr>
 					  <th scope="row"></th>
 					  <td>Жу-Жу Парк</td>
