--- a/page-Villa-Del-Vino.html
+++ b/page-Villa-Del-Vino.html
@@ -172,18 +172,18 @@
                             <span class="txt-alg-jf">
                               
                                 Цена билета при брони до   -Дата-: 10.10 взрослые 
-                                 <strong>-Цена- 787 грн.</strong>, 
+                                 <strong> 787 грн.</strong>, 
                                    дети  от 3 до 12 лет 
-                                 <strong>-Цена- 537грн.</strong>;
+                                 <strong> 537грн.</strong>;
 				  дети от 13 до 17 лет
-                                 <strong>-Цена- 587грн.</strong>;   
+                                 <strong> 587грн.</strong>;   
                                  <hr>
                                  При брони с -Дата- 11.10 если будут места: взрослые 
-                                 <strong>-Цена- 810 грн.</strong>, 
+                                 <strong> 810 грн.</strong>, 
                                    дети от 3 до 12 лет
-                                 <strong>-Цена- 580грн.</strong>;
+                                 <strong> 580грн.</strong>;
 				    дети от 13 до 17 лет
-                                 <strong>-Цена- 610грн.</strong>;
+                                 <strong> 610грн.</strong>;
                                  <hr>
                                  <i>*Примечание </i>
 				    до 3х бесплатно(без предоставления отдельного места в транспорте)
