--- a/page-Villa-Del-Vino.html
+++ b/page-Villa-Del-Vino.html
@@ -171,14 +171,14 @@
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
                               
-                                Цена билета при брони до   -Дата-: 10.10 взрослые 
+                                Цена билета при брони до 10.10 взрослые 
                                  <strong> 787 грн.</strong>, 
                                    дети  от 3 до 12 лет 
                                  <strong> 537грн.</strong>;
 				  дети от 13 до 17 лет
                                  <strong> 587грн.</strong>;   
                                  <hr>
-                                 При брони с -Дата- 11.10 если будут места: взрослые 
+                                 При брони с 11.10 если будут места: взрослые 
                                  <strong> 810 грн.</strong>, 
                                    дети от 3 до 12 лет
                                  <strong> 580грн.</strong>;
