--- a/packages.html
+++ b/packages.html
@@ -205,7 +205,7 @@
                             </a>
                         </h5>
                         <p class="">
-                            Экскурсия с дегустацией...
+                            Экскурсия с сырной дегустацией...
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 14 Октября </span></li>
