--- a/page-Kharkov-ball-of-chrysanthemums.html
+++ b/page-Kharkov-ball-of-chrysanthemums.html
@@ -10,16 +10,16 @@
     <meta charset="utf-8">
   
     <!-- Описание -->
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Харьков. Бал Хризантем, дворец Кенинга и бал Хризантем Харькова! Жиавая глина опiшня и огни Полтавы">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Харьков. Бал Хризантем, дворец Кенинга и бал Хризантем Харькова! Живая глина опiшня и огни Полтавы">
     <!-- //Описание -->
     <!-- Ключевые слова -->
     <meta name="keywords"
-        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Харьков. Бал Хризантем, дворец Кенинга и бал Хризантем Харькова! Жиавая глина опiшня и огни Полтавы"/>
+        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Харьков. Бал Хризантем, дворец Кенинга и бал Хризантем Харькова! Живая глина опiшня и огни Полтавы"/>
     <!-- //Ключевые слова -->
   
     <!-- Open Graph -->
     <meta property="og:title" content="Харьков. Бал Хризантем">
-    <meta property="og:description" content="Дворец Кенинга и бал Хризантем Харькова! Жиавая глина опiшня и огни Полтавы" />
+    <meta property="og:description" content="Дворец Кенинга и бал Хризантем Харькова! Живая глина опiшня и огни Полтавы" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Kharkov-ball-of-chrysanthemums.html" />
     <meta property="og:image" content="images/Kharkov-ball-of-chrysanthemums/inside-Kharkov-ball-of-chrysanthemums.jpg">
@@ -139,7 +139,7 @@
                         </div>
                             <!-- Подзаголовок -->
                             <h4 class="mb-3">
-                            	Дворец Кенинга и бал Хризантем Харькова! Жиавая глина опiшня и огни Полтавы
+                            	Дворец Кенинга и бал Хризантем Харькова! Живая глина опiшня и огни Полтавы
                             </h4>
                             <!-- //Подзаголовок -->
                       
