--- a/page-Kharkov-ball-of-chrysanthemums.html
+++ b/page-Kharkov-ball-of-chrysanthemums.html
@@ -165,12 +165,12 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета при брони до -Дата-: 8.10 
+                                Цена билета при брони до 8.10 
                                  <strong>-Цена- 1850грн.</strong>,
                                  1800 грн/чел при брони от 4 х мест 
                                  1750 грн/чел при брони от 6 мест
                                  <hr>
-                                 при брони с  -Дата- :9.10 
+                                 при брони с 9.10 если буду места 
                                  <strong>-Цена- 1950грн.</strong>, 
                                   1900 грн/чел при брони от 4 х мест 
                                   1850 грн/чел при брони от 6 мест
