--- a/page-Kharkov-ball-of-chrysanthemums.html
+++ b/page-Kharkov-ball-of-chrysanthemums.html
@@ -131,9 +131,9 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <!-- 14 Октября 2021 -->
+                                    <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">15 - 16 Октября</span>
-                                    <!-- //14 Октября 2021-->
+                                    <!-- //Дата-->
                                 </li>
                             </ul>
                         </div>
@@ -255,7 +255,9 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body">
-                                        
+                                         <h3>
+					    15 октября 
+					 </h3>
                                         <p class="txt-alg-jf"> <strong> 7:00 </strong>
                                          Выезд из Центра Запорожья после минутки позитива.  Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ
 					 тур. класса (раскладные сидения), TV  (ЛЕГКАЯ ДОРОГА). Заберем Вас : Авто и Жд 
@@ -279,8 +281,11 @@
 					 хочет гулять и делать потрясающие фото для Instagram и супер видео для Tik Tok продолжает прогулку.
                                          Не забывайте о нас когда выставляете сторизы и фото:) Отмечайте наши странички, Вам +1000000000 в карму
                                          </p>
-					 16 октября 
-                                        <p class="txt-alg-jf"> <strong> 8:00 </strong>
+					 <hr>
+					 <h3>
+					    16 октября 
+					 </h3>
+                                         <p class="txt-alg-jf"> <strong> 8:00 </strong>
                                          кто рано встал, тот все успел! А у нас еще впереди Шаровка и Бал в Харькове ! Потому самостоятельно 
 					 завтракаем и быстренько выезжаем дальше.
                                          </p>
