--- a/page-Kharkov-ball-of-chrysanthemums.html
+++ b/page-Kharkov-ball-of-chrysanthemums.html
@@ -255,9 +255,9 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body">
-                                         <h3>
+                                         <h5 class="badge-l">
 					    15 октября 
-					 </h3>
+					 </h5>
                                         <p class="txt-alg-jf"> <strong> 7:00 </strong>
                                          Выезд из Центра Запорожья после минутки позитива.  Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ
 					 тур. класса (раскладные сидения), TV  (ЛЕГКАЯ ДОРОГА). Заберем Вас : Авто и Жд 
@@ -282,9 +282,9 @@
                                          Не забывайте о нас когда выставляете сторизы и фото:) Отмечайте наши странички, Вам +1000000000 в карму
                                          </p>
 					 <hr>
-					 <h3>
+					 <h5 class="badge-l">
 					    16 октября 
-					 </h3>
+					 </h5>
                                          <p class="txt-alg-jf"> <strong> 8:00 </strong>
                                          кто рано встал, тот все успел! А у нас еще впереди Шаровка и Бал в Харькове ! Потому самостоятельно 
 					 завтракаем и быстренько выезжаем дальше.
