--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -302,9 +302,9 @@
                 </div>
                 <!-- //Харьков, Хризантемы, Диснейленд -->
 
-                <!-- Набережная  -->
+                <!-- Львов  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Львов На Выходные</h4>
+                    <h4 class="destination mb-3">Львов</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html">
                             <img src="./images/Lviv-for-weekend/pop-Lviv-for-weekend.jpg" class="img-fluid" alt="Набережная">
@@ -326,7 +326,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- //Набережная  -->
+                <!-- //Львов  -->
 
                 <!-- Жу-Жу Парк  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
