--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -131,6 +131,12 @@
 					  <td>VILLA DEL VINO</td>
 					  <td>14 Октября</td>
 				       </tr>
+
+                                       <tr>
+					  <th scope="row"></th>
+					  <td>Харьков. Бал Хризантем</td>
+					  <td>15-16 Октября</td>
+				       </tr>
 				      
 				       <tr>
 					  <th scope="row"></th>
