--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -175,7 +175,7 @@
                                 Цена при брони билета до 15 октября: <strong>2500 грн.</strong>дети до 12 лет<strong>2400 
                                     грн.</strong>;
                                 <hr>
-                                При брони С 16 до 31 октября : 2600 грн взрослые <strong>2700 грн.</strong>, дети до 12 лет<strong>2500 
+                                При брони С 16 до 31 октября :  взрослые <strong>2650 грн.</strong>, дети до 12 лет<strong>2500 
                                     грн.</strong>;
                                 <hr>
                                 При брони С 1 ноября,  при условии что будут места: взрослые <strong>2800 грн.</strong>, дети до 12 лет <strong>2700  грн.</strong>.
