--- a/page-Volnogorsk-Maldives.html
+++ b/page-Volnogorsk-Maldives.html
@@ -127,7 +127,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 3 Октября </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 14 Ноября </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -163,15 +163,15 @@
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
                               
-                                Цена билета при брони до 15 сентября: взрослые 
-                                 <strong> 685 грн.</strong>, 
+                                Цена билета при брони до 30 октября: взрослые 
+                                 <strong> 630 грн.</strong>, 
                                    дети  от 3 до 12 лет 
-                                 <strong> 600 грн.</strong>;
+                                 <strong> 550 грн.</strong>;
                                  <hr>
-                                 С 16 до 20 сентября: взрослые 
-                                 <strong> 725 грн.</strong>, 
-                                   дети от 3 до 12 лет
-                                 <strong> 700 грн.</strong>;
+                                 С 1 ноября: взрослые 
+                                 <strong> 650 грн.</strong>, 
+                                   дети от 6 до 12 лет
+                                 <strong> 570 грн.</strong>;
                                  <hr>
                                  <i>* До 5 лет бесплатно (без предоставления отдельного места в транспорте, в сопровождении 2х взрослых). </i>
                             </span>
@@ -180,7 +180,7 @@
                       
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 685 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> от 550 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span> 1 День</span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
