--- a/page-Scythian-camp-Khortytsya.html
+++ b/page-Scythian-camp-Khortytsya.html
@@ -22,7 +22,7 @@
     <meta property="og:description" content="Описание" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Ссылка на страницу" />
-    <meta property="og:image" content="Картинка">
+    <meta property="og:image" content="images/Scythian-camp-Khortytsya/inside-Scythian-camp-Khortytsya.jpg">
     <!-- //Open Graph -->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
@@ -125,7 +125,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="Ссылка на картинку" alt="Картинка" class="img-fluid">  
+                    <img src="images/Scythian-camp-Khortytsya/inside-Scythian-camp-Khortytsya.jpg" alt="Картинка" class="img-fluid">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
