--- a/page-Scythian-camp-Khortytsya.html
+++ b/page-Scythian-camp-Khortytsya.html
@@ -19,7 +19,7 @@
   
     <!-- Open Graph -->
     <meta property="og:title" content="Скифский стан Хортица">
-    <meta property="og:description" content="ХОРТИЦА СКИФСКИЙ СТАН . ЯЙЦО ЖЕЛАНИЙ . КОЗАКИ В ДОЗОРЕ И ДЕНДРОПАК ! ЛАПИДАРИЙ И БЕКЕТ ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ" />
+    <meta property="og:description" content="ХОРТИЦА СКИФСКИЙ СТАН. ЯЙЦО ЖЕЛАНИЙ. КОЗАКИ В ДОЗОРЕ И ДЕНДРОПАК! ЛАПИДАРИЙ И БЕКЕТ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html" />
     <meta property="og:image" content="images/Scythian-camp-Khortytsya/inside-Scythian-camp-Khortytsya.jpg">
@@ -132,9 +132,9 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <!-- 14 Октября 2021 -->
+                                    <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 14 октября 2021 </span>
-                                    <!-- //14 Октября 2021-->
+                                    <!-- //Дата -->
                                 </li>
                             </ul>
                         </div>
@@ -165,15 +165,15 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета при брони до -Дата-10.10: взрослые 
-                                 <strong>-Цена- 95 грн.</strong>,
+                                Цена билета при брони до  10.10: взрослые 
+                                 <strong>  95 грн.</strong>,
                                    дети от 5 до 12 лет 
-				    <strong>-Цена- 80 грн.</strong>; 
+				    <strong> 80 грн.</strong>; 
                                  <hr>
-                                 при брони -Дата- с 11 до 13.10: взрослые 
-                                 <strong>-Цена- 105 грн.</strong>, 
+                                 при брони с 11 до 13.10: взрослые 
+                                 <strong> 105 грн.</strong>, 
                                    дети от 5 до 12 лет
-                                 <strong>-Цена- 95 грн.</strong>;
+                                 <strong> 95 грн.</strong>;
 				    <hr>
                                  <i>*Примечание </i>
 				    до 4х бесплатно в сопровождении взрослого
@@ -183,7 +183,7 @@
                       
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> -Цена- от 80 Грн. </span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> от 80 Грн. </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span> 1 День</span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
