--- a/page-Scythian-camp-Khortytsya.html
+++ b/page-Scythian-camp-Khortytsya.html
@@ -258,7 +258,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body">
                                         
-                                        <p class="txt-alg-jf"> <strong> 11:30- </strong>
+                                        <p class="txt-alg-jf"> <strong> 11:30 </strong>
                                         сбор в р-не о.Хортица(дополнительно сообщаем всем кто записался на экскурсию за 2 дня до даты ) Минутка позитива и в путешествие.
                                          </p>
                                          <p class="txt-alg-jf"> <strong> 11:35-14:30 </strong>
