--- a/page-Scythian-camp-Khortytsya.html
+++ b/page-Scythian-camp-Khortytsya.html
@@ -302,8 +302,8 @@
                                             </a>
                                             <!-- //instagram -->
                                             <a href="https://www.instagram.com/" title="Instagram" target="_blank">
-                                                Instagram
-                                            </a>,
+                                                Instagram,
+                                            </a>
 
                                             <!-- TiKTok -->
                                             <a href="https://www.tiktok.com/" title="TiK Tok" target="_blank">
@@ -342,8 +342,8 @@
                                             <!-- //TiKTok -->
                                             <a href="https://www.tiktok.com/" title="TiK Tok" target="_blank"
                                                 rel="noopener">
-                                                Tik Tok
-                                            </a>,
+                                                Tik Tok,
+                                            </a>
                                             <!-- Facebook -->
                                             <a title="Facebook"
                                                 href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html"
@@ -371,8 +371,8 @@
                                             <a title="Facebook"
                                                 href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html"
                                                 target="_blank" rel="noopener">
-                                                Facebook
-                                            </a>,
+                                                Facebook,
+                                            </a>
                                             <!-- Telegram -->
                                             <a title="Telegram"
                                                 href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Roses-Farm-Waterfall.html"
@@ -478,8 +478,8 @@
                                             <a title="Telegram"
                                                 href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html"
                                                 target="_blank">
-                                                Telegram
-                                            </a>,
+                                                Telegram,
+                                            </a>
                                             <!-- //Telegram -->
 
 <!-- В ссылках соц.сетей, необходимо исправить ссылку на данную страницу -->
@@ -578,8 +578,8 @@
                                             <a title="Twitter"
                                                 href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html"
                                                 target="_blank">
-                                                Twitter
-                                            </a>,
+                                                Twitter,
+                                            </a>
                                             <!-- //Twitter -->
                                           
 <!-- В ссылках соц.сетей, необходимо исправить ссылку на данную страницу -->
@@ -594,8 +594,8 @@
                                             <a title="Viber"
                                                 href="viber://forward?text=https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html"
                                                 target="_blank">
-                                                Viber
-                                            </a>,
+                                                Viber,
+                                            </a>
                                             <!-- //Viber -->
                                           
   <!-- В ссылках соц.сетей, необходимо исправить ссылку на данную страницу -->
