--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -163,7 +163,31 @@
                     </div>
                 </div>
                 <!--  //Лимонарий -->
-                
+                                            
+                <!--  Святогорск И Соледар -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Svyatogorsk-and-Soledar.html">
+                            <img src="images/Svyatogorsk-and-Soledar/home-Svyatogorsk-and-Soledar-.jpg"
+                                alt="Svyatogorsk-and-Soledar" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>2860грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Донецкая обл.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Svyatogorsk-and-Soledar.html">Святогорск И
+                                Соледар</a>
+                        </h5>
+                        <p class="">Там очень Круто и необычно!</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>09 - 10 Октября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Святогорск И Соледар -->
+
                 <!--  Турция -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
