--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -101,6 +101,8 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+                            <li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>
+                            <li class="breadcrumb-item"><a class="text-primary" href="packages-page-three.html">Туры, стр.3</a></li>
                             <li class="breadcrumb-item active" aria-current="page"> Святогорск и Соледар</li>
                         </ol>
                     </nav>
