--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -131,7 +131,7 @@
                                 <li>
                                     <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">
-                                        09 - 10 Октября
+                                        Под Заказ
                                     </span>
                                     <!-- //Дата -->
                                 </li>
