--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -181,7 +181,7 @@
                         </h5>
                         <p class="">Там очень Круто и необычно!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>09 - 10 Октября</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
