--- a/page-example.html
+++ b/page-example.html
@@ -119,7 +119,7 @@
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <!-- Заголовок -->
-                    <h3 class="title">Название тура</h3>
+                    <h3 class="title tour-title">Название тура</h3>
                     <!-- //Заголовок -->
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
@@ -884,6 +884,10 @@
         setInterval(function () {
             travel.classList.toggle('text-danger');
         }, 1500)
+    </script>
+
+    <script>
+	    document.querySelector('tour-title').innerText = 'Конь';
     </script>
 </body>
 
