--- a/page-example.html
+++ b/page-example.html
@@ -887,7 +887,7 @@
     </script>
 
     <script>
-	    document.querySelector('tour-title').innerText = 'Конь';
+	    document.querySelector('.tour-title').innerText = 'Конь';
     </script>
 </body>
 
