--- a/page-example.html
+++ b/page-example.html
@@ -887,7 +887,7 @@
     <script>
 	    document.querySelector('.tour-title').innerText = 'Название тура';
 	    document.querySelector('.tour-picture').src = './images/Volnogorsk-Maldives/inside-Volnogorsk-Maldives.jpg';
-	    document.querySelector('tour-date').innerText = 'Дата тура';
+	    document.querySelector('.tour-date').innerText = 'Дата тура';
 	    document.querySelector('.tour-subtitle').innerText = 'Подзаголовок';
 	    
 	     
