--- a/page-example.html
+++ b/page-example.html
@@ -186,7 +186,7 @@
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span> Стоимость: <span class="tour-cost"></span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span> 1 День</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span class="tour-duration"></span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
 
