--- a/page-example.html
+++ b/page-example.html
@@ -110,7 +110,7 @@
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
                           <!-- Название тура -->
-                            <li class="breadcrumb-item active" aria-current="page">Название тура</li>
+                            <li class="breadcrumb-item active tour-title" aria-current="page"></li>
                           <!-- //Название тура -->
                         </ol>
                     </nav>
@@ -886,7 +886,7 @@
 
     <script>
 	    //Название тура
-	    document.querySelector('.tour-title').innerText = 'Название тура';
+	    document.querySelector('.tour-title').innerText = 'Название its тура';
 	    //Ссылка на картинку
 	    document.querySelector('.tour-picture').src = './images/Volnogorsk-Maldives/inside-Volnogorsk-Maldives.jpg';
 	    //Дата тура
