--- a/page-example.html
+++ b/page-example.html
@@ -163,8 +163,8 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета до -Дата-: взрослые 
-                                 <strong>-Цена- грн.</strong>,
+                                Цена билета до <strong class="ticket-price-before-Date-1"></strong>: взрослые 
+                                 <strong class="adult-ticket-price-Date-1"></strong>грн.,
                                    дети  от 3 до 12 лет 
                                  <strong>-Цена- грн.</strong>;
 				  дети от 13 до 17 лет
@@ -897,6 +897,10 @@
 	    document.querySelector('.tour-program-description-1').innerText = 'Описание прогарммы тура-1';
 	    document.querySelector('.tour-program-description-2').innerText = 'Описание прогарммы тура-2';
 	    document.querySelector('.tour-program-description-3').innerText = 'Описание прогарммы тура-3';
+	    //Цена билета до (Дата)
+	    document.querySelector('.ticket-price-before-Date-1').innerText = 'Дата';
+	    
+	    document.querySelector('.adult-ticket-price-Date-1').innerText = 'Цена';
 	    //Стоимость
 	    document.querySelector('.tour-cost').innerText = '$-Стоимость';
 	    //Продолжительность
