--- a/page-example.html
+++ b/page-example.html
@@ -897,10 +897,14 @@
 	    document.querySelector('.tour-program-description-1').innerText = 'Описание прогарммы тура-1';
 	    document.querySelector('.tour-program-description-2').innerText = 'Описание прогарммы тура-2';
 	    document.querySelector('.tour-program-description-3').innerText = 'Описание прогарммы тура-3';
+	    
+	    //! Информируем
 	    //Цена билета до (Дата)
 	    document.querySelector('.ticket-price-before-Date-1').innerText = 'Дата';
+	    //Взрослые билета (Цена)
+	    document.querySelector('.adult-ticket-price-Date-1').innerText = '$-Цена';
+	    //***
 	    
-	    document.querySelector('.adult-ticket-price-Date-1').innerText = 'Цена';
 	    //Стоимость
 	    document.querySelector('.tour-cost').innerText = '$-Стоимость';
 	    //Продолжительность
