--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -134,7 +134,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span> 24 октября и 13 ноября<span class="dateOfTravel tour-date"></span>
+                                    <span class="fa fa-calendar mr-2"></span><span class="dateOfTravel tour-date"> 24 октября и 13 ноября </span>
                                     <!-- //Дата-->
                                 </li>
                             </ul>
@@ -168,7 +168,7 @@
                                  <strong class="adult-ticket-price-Date-1"></strong> 220 грн.,
                                   <hr>
                                  при брони с 1 до 23 октября : взрослые 
-                                 <strong>-Цена- 240 грн.</strong>, 
+                                 <strong> 240 грн.</strong>, 
                                   <hr>
                                  <i>*Примечание </i>
 				 до 4х лет бесплатно без участия в дегустации. При брони 10 мест, 11 бесплатно!
