--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -133,14 +133,17 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span><span class="dateOfTravel tour-date"> 24 октября и 13 ноября </span>
-                                    <!-- //Дата-->
+                                   <!-- Дата -->
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 24 октября и 13 ноября  2021 </span>
+                                    <!-- //Дата -->
                                 </li>
+                            </li>
                             </ul>
                         </div>
                             <!-- Подзаголовок -->
-                            <h4 class="mb-3 tour-subtitle"></h4>
+                            <h4 class="mb-3">
+                            СЫРНАЯ ФЕРМА С ДЕГУСТАЦИЕЙ 7 ВИДОВ СЫРА, ЙОГУРТА И МОЛОКА! САМАЯ ВКУСНАЯ ЭКСКУРСИЯ
+                            </h4>
                             <!-- //Подзаголовок -->
                       
                             <!-- Описание прогарммы тура -->
