--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -167,10 +167,10 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета при брони до <strong class="ticket-price-before-Date-1"></strong>: 15.10 взрослые 
+                                Цена билета при брони до <strong class="ticket-price-before-Date-1"></strong> 15.10 : 
                                  <strong class="adult-ticket-price-Date-1"></strong> 220 грн.,
                                   <hr>
-                                 при брони с 1 до 23 октября : взрослые 
+                                 при брони с 1 до 23 октября :
                                  <strong> 240 грн.</strong>, 
                                   <hr>
                                  <i>*Примечание </i>
