--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -134,14 +134,14 @@
                             <ul class="listing mt-3">
                                 <li>
                                    <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"></span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel tour-date"></span>
                                     <!-- //Дата -->
                                 </li>
                             </li>
                             </ul>
                         </div>
                             <!-- Подзаголовок -->
-                            <h4 class="mb-3">
+                            <h4 class="mb-3 tour-subtitle">
                             СЫРНАЯ ФЕРМА С ДЕГУСТАЦИЕЙ 7 ВИДОВ СЫРА, ЙОГУРТА И МОЛОКА! САМАЯ ВКУСНАЯ ЭКСКУРСИЯ
                             </h4>
                             <!-- //Подзаголовок -->
