--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -883,7 +883,7 @@
     <!-- Содержание -->
     <script>
 	    //Название тура
-	    document.querySelectorAll('.tour-title').innerText = 'Сырная ферма с дегустацией';
+	    document.getElementsByClassName('.tour-title').innerText = 'Сырная ферма с дегустацией';
 	    //Ссылка на картинку
 	    document.querySelector('.tour-picture').src = './images/cheese-farm/cheese-farm/inside-cheese-farm.jpg';
 	    //Дата тура
