--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -883,9 +883,9 @@
     <!-- Содержание -->
     <script>
 	    //Хлебные крошки
-	    document.getElementsByClassName('.tour-breadcrumb').innerText = 'Сырная ферма с дегустацией';
+	    document.querySelector('.tour-breadcrumb').innerText = 'Сырная ферма с дегустацией';
 	    //Название тура
-	    document.getElementsByClassName('.tour-title').innerText = 'Сырная ферма с дегустацией';
+	    document.querySelector('.tour-title').innerText = 'Сырная ферма с дегустацией';
 	    //Ссылка на картинку
 	    document.querySelector('.tour-picture').src = './images/cheese-farm/cheese-farm/inside-cheese-farm.jpg';
 	    //Дата тура
