--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -167,10 +167,10 @@
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
 				
                             <span class="txt-alg-jf">
-                                Цена билета при брони до <strong class="ticket-price-before-Date-1"></strong>: 
+                                Цена билета при брони до <u class="ticket-price-before-Date-1"></u>: 
                                  <strong class="adult-ticket-price-Date-1"></strong>,
                                   <hr>
-                                 при брони с <strong class="ticket-price-before-Date-2"></strong>:
+                                 при брони с <u class="ticket-price-before-Date-2"></u>:
                                  <strong class="adult-ticket-price-Date-2"></strong>, 
                                   <hr>
                                  <i>*Примечание </i>
