--- a/about.html
+++ b/about.html
@@ -121,9 +121,9 @@
                         Путешествуйте с улыбкой. С любовью Новый поворот!
                     </p>
                     <!-- Оставить отзыв в Google -->
-                    <div class="mt-4 mb-1">
+                    <div class="mt-4 mb-1" style="box-sizing: border-box;">
                         <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review" target="_blank">
-                            <button type="button" class="btn btn-outline-info mr-3 w-100">
+                            <button type="button" class="btn btn-outline-info mr-3 w-100" style="box-sizing: border-box;">
                                 Оставить отзыв в Google
                             </button>
                         </a>
