--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -109,7 +109,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>05 Сентября</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>31 Октября</span>
                                 </li>
                             </ul>
                         </div>
