--- a/page-two-zoos.html
+++ b/page-two-zoos.html
@@ -23,7 +23,7 @@
     <meta property="og:description" content="Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-two-zoos" />
-    <meta property="og:image" content="images/two-zoos/two-zoos/inside-two-zoos.jpg">
+    <meta property="og:image" content="images/two-zoos/inside two zoos.jpg">
     <!-- //Open Graph -->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
