--- a/page-two-zoos.html
+++ b/page-two-zoos.html
@@ -141,11 +141,12 @@
                         </div>
                             <!-- Подзаголовок -->
                             <h4 class="mb-3"></h4>
-                            Угости яблочком Мишку, ослика морковкой и енота рыбкой!  Наступила осень и у всех разыгрался аппетит!
+                            Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба
                             <!-- //Подзаголовок -->
                       
                             <!-- Описание прогарммы тура -->
                             <p class="txt-alg-jf">
+		            Угости яблочком Мишку, ослика морковкой и енота рыбкой!  Наступила осень и у всех разыгрался аппетит!
                             Грозный львиный рев, смешные игры львят и тигрятами, вальяжный дикообраз, потрясающие ушки рыси с милыми кисточками... 
                             </p> 
                             <p class="txt-alg-jf">
