--- a/page-two-zoos.html
+++ b/page-two-zoos.html
@@ -126,7 +126,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="Ссылка на картинку" alt="Картинка" class="img-fluid">  
+                    <img src="images/two-zoos/inside-two-zoos.jpg" alt="Картинка" class="img-fluid">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
