--- a/page-two-zoos.html
+++ b/page-two-zoos.html
@@ -111,7 +111,7 @@
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
                           <!-- Название тура -->
-                            <li class="breadcrumb-item active" aria-current="page"></li>
+                            <li class="breadcrumb-item active" aria-current="page">Два зоопарка</li>
                           <!-- //Название тура -->
                         </ol>
                     </nav>
@@ -120,7 +120,7 @@
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <!-- Заголовок -->
-                    <h3 class="title"></h3>
+                    <h3 class="title">Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба</h3>
                     <!-- //Заголовок -->
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
@@ -134,7 +134,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: 31 октября 2021<span class="dateOfTravel"></span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">31 октября 2021</span>
                                     <!-- //Дата-->
                                 </li>
                             </ul>
