--- a/page-two-zoos.html
+++ b/page-two-zoos.html
@@ -140,8 +140,7 @@
                             </ul>
                         </div>
                             <!-- Подзаголовок -->
-                            <h4 class="mb-3"></h4>
-                            Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба
+                            <h4 class="mb-3"> Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба</h4>
                             <!-- //Подзаголовок -->
                       
                             <!-- Описание прогарммы тура -->
