--- a/packages.html
+++ b/packages.html
@@ -178,7 +178,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-two-zoos.html.html">
-                                Хортица
+                               Два зоопарка
                             </a>
                         </h5>
                         <p class="">Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба... </p>
