--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
                 <input type="checkbox" id="drop" />
-                <ul class="menu ml-auto mt-1">
+                <ul class="menu ms-auto mt-1">
                     <li class="active"><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html">Отзывы</a></li>
                     <li class="nav-item dropdown">
