--- a/index.html
+++ b/index.html
@@ -93,15 +93,27 @@
                 <ul class="menu ms-auto mt-1">
                     <li class="active"><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html">Отзывы</a></li>
+                    
+<div class="dropdown">
+  <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Туры
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li> <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a></li>
+    <li><a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a></li>
+  </ul>
+</div>
+                    <!--                    
                     <li class="nav-item dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                            aria-expanded="false">Туры</a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a>
                             <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание
                                 Туров</a>
                         </div>
                     </li>
+                    -->
+                    
                     <li class=""><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
