--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <li class="active"><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html">Отзывы</a></li>
                     
-<div class="dropdown">
+<li class="dropdown">
   <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Туры
   </button>
@@ -102,7 +102,7 @@
     <li> <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a></li>
     <li><a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a></li>
   </ul>
-</div>
+</li>
                     <!--                    
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
