--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 </div>
                 <label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
                 <input type="checkbox" id="drop" />
-                <ul class="menu ms-auto mt-1">
+                <ul class="menu ml-auto mt-1">
                     <li class=""><a href="index.html">Главная</a></li>
                     <li class="active"><a href="about.html"> Отзывы </a></li>
                     <li class="nav-item dropdown">
