--- a/blog-page-example.html
+++ b/blog-page-example.html
@@ -171,7 +171,11 @@
                         <div class="d-grid left-right mt-5 pb-md-5">
                             <div class="buttons-singles text-left tags">
                                 <h4>Тэги:</h4>
-                                <a href="#blog-tag">В путешествии арестовали</a>
+                                
+                                <a href="#blog-tag">
+                                    !!!НАЗВАНИЕ СТАТЬИ!!!
+                                </a>
+                                
                             </div>
                             <div class="buttons-singles text-left">
                                 <h4>Поделиться:</h4>
