--- a/about.html
+++ b/about.html
@@ -438,6 +438,9 @@
         </a>
     </div>
 
+    <script src="./scripts/scriptSmoothScrolling.js"></script>
+    <!-- move top -->  
+
     <script src="./libs/jquery-3.5.1.js"></script>
     <script src="./libs/popper.min.js"></script>
     <script src="./libs/bootstrap.min.js"></script>
