--- a/packages.html
+++ b/packages.html
@@ -176,7 +176,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-two-zoos.html.html">
+                            <a href="https://novipovorot.pp.ua/page-two-zoos.html">
                                Два зоопарка
                             </a>
                         </h5>
