--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -108,7 +108,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>31 Октября</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>14 Ноября</span>
                                 </li>
                             </ul>
                         </div>
@@ -132,6 +132,8 @@
                             <span class="txt-alg-jf">
                                 Стоимость 80 грн. - для детей от 5 до 12 лет, 
                                 дети до 4-х лет бесплатно.
+                                При брони с 11 до 13 ноября цена 105 грн,
+                                дети 5-12 лет - 95 грн
                             </span>
                         </div>
                         <!-- //Alert -->
