--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -172,6 +172,7 @@
                                  при брони с <u class="ticket-price-before-Date-2"></u>:
                                  <strong class="adult-ticket-price-Date-2"></strong>, 
                                   <hr>
+				  175 грн детям 5-10 лет (4 вида сыра и молоко в дегустации)
                                  <i>*Примечание </i>
 				 до 4х лет бесплатно без участия в дегустации. При брони 10 мест, 11 бесплатно!
                                  Бери с собой друзей и родных, это будет круто!
@@ -181,8 +182,8 @@
                       
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span class="tour-cost"></span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span class="tour-duration"></span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span class="tour-cost">240 грн</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span class="tour-duration">1 День</span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
 
