--- a/packages.html
+++ b/packages.html
@@ -121,7 +121,7 @@
                         <p><span class="fa fa-tags"></span> <span>220грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожская обл.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-cheese-farm-tasting.html">
                                Сырная ферма с дегустацией
