--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -146,7 +146,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>5 и 11 декабря</span>
                                 </li>
                             </ul>
                         </div>
@@ -172,13 +172,12 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
-                             Последние экскурсии в 2021 году. 
-                             Следующие экскурсии не раньше декабря, января. Цена 150 грн. от 4-200 лет, до 4 лет бесплатно
+                             Цена 250 грн. от 4-12 -200 лет, до 4 лет бесплатно
                             </span>
                         </div> -->
                         <!-- //Alert warning -->
                         <!--   <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>150 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>250 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
@@ -250,10 +249,10 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><b> -- </b> время сбора группы на экскурсию.
+                                        <p><b> 11:45 -5.12 и 10:45 -11.12 </b> время сбора группы на экскурсию.
                                             Сбор в районе 9-й больницы, Правый берег,
-                                            дополнительную информацию сбрасываем за 2-3 дня
-                                            до тура всем кто записался и оплатил экскурсию 50%.
+                                            дополнительную информацию сбрасываем за 1-2 дня
+                                            до тура всем кто записался и оплатил экскурсию.
                                             (как всегда оплата через расчетный счет в течении суток после брони)</p>
                                         <p><b> -- </b> после небольшой пешей прогулки мы на месте.
                                             Проходим частную территорию и попадаем в Лимонарий!
@@ -273,7 +272,7 @@
                                                 предварительные, они могут быть изменены в
                                                 зависимости от состава группы, без изменения
                                                 указанной программы! Группы от 7 до 16 человек,
-                                                возможен заказ индивидуальных экскурсий от 6 до 9
+                                                возможен заказ индивидуальных экскурсий от 7
                                                 человек.
                                             </i></p>
                                     </div>
